--- a/scores/css/ezscore.css
+++ b/scores/css/ezscore.css
@@ -6,7 +6,8 @@
 	width: 100%;
 	height: 200px;
 	overflow-y: auto;
-	position: absolute;	
+	position: absolute;
+	padding-top: 30px;	
 }
 table.meetResults {
 	width: 100%;
@@ -173,4 +174,26 @@ textarea.fillWidth {
 }
 @media print {
 	tr.breakBefore { display: block; page-break-before: always; vertical-align: top;}
+}
+.header-background {
+    background-color: rgb(69, 158, 0);
+    height: 30px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;	
+}
+.fixed-table-container-inner {
+	overflow-x: hidden;
+    overflow-y: auto;
+    height: 100%;	
+}
+.th-inner {
+	position: absolute;
+    top: 0;
+    line-height: 30px;
+    text-align: left;
+    color: white;
+    padding-left: 5px;
+    margin-left: -5px;
 }
